--- a/prometheus/prometheus-config-map.yml
+++ b/prometheus/prometheus-config-map.yml
@@ -14,7 +14,7 @@ data:
     scrape_configs:
       - job_name: 'node-exporter'
         static_configs:
-        - targets: ['10.142.0.8:9100', '10.142.0.9:9100', '10.142.0.10:9100']
+        - targets: ['192.168.78.48:9100', '192.168.134.60:9100']
 
       - job_name: 'kubernetes-apiservers'
 
