--- a/readrules/prometheus-deployment.yml
+++ b/readrules/prometheus-deployment.yml
@@ -10,7 +10,11 @@ spec:
       labels:
         app: prometheus-server
     spec:
-      containers:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000      
+      containers:      
         - name: prometheus
           image: prom/prometheus:v2.2.1
           args:
@@ -45,4 +49,5 @@ spec:
             name: prometheus-read-rules-conf
 
         - name: prometheus-storage-volume
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: prometheus-storage-volume
