--- a/final_files/grafana-deployment.yml
+++ b/final_files/grafana-deployment.yml
@@ -20,22 +20,10 @@ spec:
         fsGroup: 2000
       containers:
       - name: grafana
-        image: grafana/grafana:latest
-        env:
-        - name: GF_SERVER_DOMAIN
-          value: "uattools.uat1.kalfin.in"
-        - name: GF_SERVER_ROOT_URL
-          value: "%(protocol)s://%(domain)s:/grafana"
+        image: grafana/grafana:6.6.0
         ports:
         - name: grafana
           containerPort: 3000
-        resources:
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"
-          requests: 
-            memory: "1Gi"
-            cpu: "500m"
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage-volume
@@ -48,5 +36,5 @@ spec:
             claimName: grafana-storage-volume
         - name: grafana-datasources
           configMap:
-              defaultMode: 420
-              name: grafana-datasources
+            defaultMode: 420
+            name: grafana-datasources
