--- a/final_files/prometheus-pvc.yml
+++ b/final_files/prometheus-pvc.yml
@@ -10,4 +10,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 20Gi
+  storageClassName: custom-aws-sc    
